#pragma once
class Cuadro
{
private:
    /* data */
public:
    Cuadro(/* args */) {}
    ~Cuadro() {}
};