#pragma once
class Forma
{
private:
    /* data */
public:
    Forma(/* args */) {}
    ~Forma() {}
};