#pragma one
class Cubo
{
private:
    /* data */
public:
    Cubo(/* args */) {}
    ~Cubo() {}
};