#pragma once 
class Estadisticas
{
private:
    /* data */
public:
    Estadisticas(/* args */) {}
    ~Estadisticas() {}
};