#pragma once
class Guion
{
private:
    /* data */
public:
    Guion(/* args */) {}
    ~Guion() {}
};