#pragma once 
class Limite
{
private:
    /* data */
public:
    Limite(/* args */) {}
    ~Limite() {}
};