#pragma once
class Linea
{
private:
    /* data */
public:
    Linea(/* args */) {}
    ~Linea() {}
};