#pragma once 
class Negro
{
private:
    /* data */
public:
    Negro(/* args */) {}
    ~Negro() {}
};