#pragma once 
class Rojo
{
private:
    /* data */
public:
    Rojo(/* args */) {}
    ~Rojo() {}
};