#pragma once
class Score
{
private:
    /* data */
public:
    Score(/* args */) {}
    ~Score() {}
};