#pragma once 
class Top
{
private:
    /* data */
public:
    Top(/* args */) {}
    ~Top() {}
};